<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttonQuickSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:onClick="onClick"
        android:text="@string/buttonQuickSearch" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btUpdate"
        android:layout_alignRight="@+id/btUpdate"
        android:layout_below="@+id/btUpdate"
        android:layout_marginTop="40dp"
        android:onClick="onClick"
        android:text="@string/buttonExit" />

    <Button
        android:id="@+id/btUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonDeepSearch"
        android:layout_alignRight="@+id/buttonDeepSearch"
        android:layout_below="@+id/buttonDeepSearch"
        android:layout_marginTop="40dp"
        android:onClick="onClick"
        android:text="@string/buttonUpdate" />

    <Button
        android:id="@+id/buttonDeepSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonQuickSearch"
        android:layout_alignRight="@+id/buttonQuickSearch"
        android:layout_below="@+id/buttonQuickSearch"
        android:layout_marginTop="40dp"
        android:onClick="onClick"
        android:text="@string/buttonDeepSearch" />

</RelativeLayout>
