<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TableLayout 
        android:id="@+id/TableView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" 
        >
	
		    <TableRow
				android:id="@+id/tableRow"
		        android:layout_width="fill_parent"  
				android:layout_height="1dp"  
		    	android:layout_weight="0.1" >
		    	
		        <TextView
		            android:id="@+id/textView1"
		            android:layout_width="1dp"
		            android:layout_height="fill_parent"
		            android:layout_gravity="right"
		            android:layout_weight="0.5" 
		            android:text="@string/SearchType"
		            android:layout_marginLeft="15dp"
		            android:layout_marginTop="15dp"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		
		        <EditText
		            android:id="@+id/editType2"
		            android:layout_width="1dp"
		            android:layout_height="fill_parent"
		            android:layout_gravity="left"
		            android:layout_marginRight="15dp"
		            android:layout_marginTop="15dp"
		            android:layout_weight="0.5"
		            android:ems="10" >
		
		            <requestFocus />
		        </EditText>
		    	    
		    </TableRow>
		
		    <TableRow
				android:id="@+id/tableRow"
		        android:layout_width="fill_parent"  
				android:layout_height="1dp"  
		    	android:layout_weight="0.1" >
		
		        <TextView
		            android:id="@+id/textView2"
		            android:layout_width="1dp"
		            android:layout_height="fill_parent"
		            android:layout_gravity="right"
		            android:layout_weight="0.5" 
		            android:layout_marginLeft="15dp"
		            android:layout_marginTop="15dp"
		            android:text="@string/SearchCity"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		
		        <EditText
		            android:id="@+id/editCity2"
		            android:layout_width="1dp"
		            android:layout_height="fill_parent"
		            android:layout_gravity="left"
		            android:layout_marginRight="15dp"
		            android:layout_marginTop="15dp"
		            android:layout_weight="0.5"
		            android:ems="10" >
		
		            <requestFocus />
		        </EditText>
		    	    
		    </TableRow>
		    
		    <TableRow
				android:id="@+id/tableRow"
		        android:layout_width="fill_parent"  
				android:layout_height="1dp"  
		    	android:layout_weight="0.1" >
		
		        <TextView
		            android:id="@+id/textView3"
		            android:layout_width="1dp"
		            android:layout_height="fill_parent"
		            android:layout_gravity="right"
		            android:layout_weight="0.5" 
		            android:text="@string/SearchRegion"
		            android:layout_marginLeft="15dp"
		            android:layout_marginTop="15dp"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		
		        <EditText
		            android:id="@+id/editRegion2"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="0.5" 
		            android:layout_marginRight="15dp"
		            android:layout_marginTop="15dp"
		            android:ems="10" >
		
		            <requestFocus />
		        </EditText>
		    	    
		    </TableRow>
		    
		    <TableRow
				android:id="@+id/tableRow"
		        android:layout_width="fill_parent"  
				android:layout_height="1dp"  
		    	android:layout_weight="0.1" >
		
		    <TextView
		            android:id="@+id/textView4"
		            android:layout_width="1dp"
		            android:layout_height="fill_parent"
		            android:layout_gravity="right"
		            android:layout_weight="0.5" 
		            android:text="@string/SearchStreet"
		            android:layout_marginLeft="15dp"
		            android:layout_marginTop="15dp"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		
		        <EditText
		            android:id="@+id/editStreet2"
		            android:layout_width="fill_parent"
		            android:layout_weight="0.5" 
		            android:layout_height="fill_parent"
		            android:layout_marginRight="15dp"
		            android:layout_marginTop="15dp"
		            android:ems="10" >
		        </EditText>
		    	    
		    </TableRow>
		    
		    <TableRow
				android:id="@+id/tableRow"
		        android:layout_width="fill_parent"  
				android:layout_height="1dp"  
		    	android:layout_weight="0.1" >
		
		        <TextView
		            android:id="@+id/textView5"
		            android:layout_width="1dp"
		            android:layout_height="fill_parent"
		            android:layout_gravity="right"
		            android:layout_weight="0.5" 
		            android:text="@string/SearchRooms"
		            android:layout_marginLeft="15dp"
		            android:layout_marginTop="15dp"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		
		        <EditText
		            android:id="@+id/editRooms2"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="0.5" 
		            android:layout_marginRight="15dp"
		            android:layout_marginTop="15dp"
		            android:ems="10" >
		
		            <requestFocus />
		        </EditText>
		    	    
		    </TableRow>
		    
		    <TableRow
				android:id="@+id/tableRow"
		        android:layout_width="fill_parent"  
				android:layout_height="1dp"  
		    	android:layout_weight="0.1" >
		
		        <TextView
		            android:id="@+id/textView6"
		            android:layout_width="1dp"
		            android:layout_height="fill_parent"
		            android:layout_gravity="right"
		            android:layout_weight="0.5" 
		            android:text="@string/SearchCost"
		            android:layout_marginLeft="15dp"
		            android:layout_marginTop="15dp"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		
		        <EditText
		            android:id="@+id/editCost2"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="0.5" 
		            android:layout_marginRight="15dp"
		            android:layout_marginTop="15dp"
		            android:ems="10" >
		
		            <requestFocus />
		        </EditText>
		    	    
		    </TableRow>
		    
		    <TableRow
				android:id="@+id/tableRow"
		        android:layout_width="fill_parent"  
				android:layout_height="1dp"  
		    	android:layout_weight="0.1" >
		
		        <Button
		            android:id="@+id/btSearch2"
		            android:layout_width="1dp"
		            android:layout_height="fill_parent"
		            android:layout_gravity="left"
		            android:layout_weight="0.5" 
		            android:text="Button" />
		
		        <Button
		            android:id="@+id/btClean2"
		            android:layout_width="1dp"
		            android:layout_height="fill_parent"
		            android:layout_gravity="left"
		            android:layout_weight="0.5" 
		            android:text="Button" />
		        
		    </TableRow>

    </TableLayout>

</RelativeLayout>
